test/errors/typecheck/call_non_func.ty
foo := { 41, 42, 43 }
foo[2]()